      (John Arbash Meinel, #247585)

    * Fix "no buffer space available" error when branching with the new
      smart server protocol to or from Windows.
      (Andrew Bennetts, #246180)

    * Deleting directories by hand before running ``bzr rm`` will not
      cause subsequent errors in ``bzr st`` and ``bzr commit``.
      (Robert Collins, #150438)

  DOCUMENTATION:


  TESTING:


  API CHANGES:

    * ``MutableTree.commit`` has an extra optional keywork parameter
      ``exclude`` that will be unconditionally supplied by the command
      line UI - plugins that add tree formats may need an update.
      (Robert Collins)

    * The API minimum version for plugin compatibility has been raised to
      1.6 - there are significant changes throughout the code base.
      (Robert Collins)

    * The generic fetch code now uses three attributes on Repository objects
      to control fetch. The streams requested are controlled via :
      ``_fetch_order`` and ``_fetch_uses_deltas``. Setting these
      appropriately allows different repository implementations to recieve
      data in their optimial form. If the ``_fetch_reconcile`` is set then
      a reconcile operation is triggered at the end of the fetch.
      (Robert Collins)

    * The ``put_on_disk`` and ``get_tar_item`` methods in
      ``InventoryEntry`` were deprecated. (Ian Clatworthy)

    * ``Repository.is_shared`` doesn't take a read lock. It didn't
      need one in the first place (nobody cached the value, and
      ``RemoteRepository`` wasn't taking one either). This saves a round
      trip when probing Pack repositories, as they read the ``pack-names``
      file when locked. And during probe, locking the repo isn't very
      useful. (John Arbash Meinel)


  INTERNALS:

    * ``bzrlib.branchbuilder.BranchBuilder`` is now much more capable of
      putting together a real history without having to create a full
      WorkingTree. It is recommended that tests that are not directly